# SparseBenchmark

./: .gitattributes  CMakeLists.txt  README.md  install.sh  run_bench.sh
matrices/: ASIC_320k.mtx  ASIC_680k.mtx  conv3d_50.mtx  lhr71.mtx  tmt_unsym.mtx  torso3.mtx
results/: all_ASIC_320k.csv  all_ASIC_680k.csv  all_lhr04.csv  all_lhr71.csv  all_thermal2.csv  all_tmt_unsym.csv  mumps_ASIC_320k_20260615_000725.csv  mumps_ASIC_680k_20260615_001208.csv  mumps_lhr04_20260614_222806.csv  mumps_lhr71_20260614_222840.csv  mumps_thermal2_20260614_121854.csv  mumps_tmt_unsym_20260615_163816.csv  mumps_torso3_20260615_141532.csv  pardiso_ASIC_320k_20260615_000508.csv  pardiso_ASIC_680k_20260615_005627.csv  pardiso_lhr04_20260614_222827.csv  pardiso_lhr71_20260614_223042.csv  pardiso_thermal2_20260614_121440.csv  pardiso_tmt_unsym_20260615_164131.csv  pardiso_torso3_20260615_143626.csv  superlu_ASIC_320k_20260615_000626.csv  superlu_lhr04_20260614_222819.csv  superlu_lhr71_20260614_223012.csv  superlu_thermal2_20260614_121104.csv  superlu_tmt_unsym_20260615_154523.csv  superlu_torso3_20260615_150531.csv
src/common/: benchmark_config.h  matrix_loader.cpp  matrix_loader.h  mem_util.h  solver_result.h
src/mumps/: main_mumps.cpp  mumps_solver.cpp  mumps_solver.h
src/pardiso/: main_pardiso.cpp  pardiso_solver.cpp  pardiso_solver.h
src/superlu/: main_superlu.cpp  superlu_solver.cpp  superlu_solver.h
